...
              <NativeButton
                title={isRTL ? 'تأكيد' : 'Confirm'}
                onPress={handleConfirm}
                loading={actionLoading}
                disabled={actionLoading}
                icon="check"
                testID="damin-confirm-btn"
              />
            </View>
          </View>
        </View>
      );
    }
...
